--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <link href="css/style.css" rel="stylesheet" type="text/css"></link>
 
  
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
+  <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
+  <script src="js/jQuery.js"></script>
+  <script src="http://code.highcharts.com/highcharts.js"></script>
+  <script src="http://code.highcharts.com/modules/exporting.js"></script>
 
   <script src="js/helper.js"></script>
 
  
-  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
+  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
   <meta name="viewport" content="width=device-width">
 </head>
