--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <link href="css/style.css" rel="stylesheet" type="text/css"></link>
 
  
-  <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
-  <script src="js/jQuery.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <!--<script src="js/jQuery.js"></script>-->
   <script src="http://code.highcharts.com/highcharts.js"></script>
   <script src="http://code.highcharts.com/modules/exporting.js"></script>
 
