--- a/index.html
+++ b/index.html
@@ -91,28 +91,28 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
       an opening and closing set of slash asterisks for block comments.
   */
   if(document.getElementsByClassName("flex-item").length === 0) {
-    document.getElementById("topContacts").style.display = "black";
+    document.getElementById("topContacts").style.backgroundColor = "black";
   }
   if(document.getElementsByTagName("h1").length === 0) {
-    document.getElementById("header").style.display = "black";
+    document.getElementById("header").style.backgroundColor = "black";
   }
   if(document.getElementsByClassName("work-entry").length === 0) {
-    document.getElementById("workExperience").style.display = "black";
+    document.getElementById("workExperience").style.backgroundColor = "black";
   }
   if(document.getElementsByClassName("project-entry").length === 0) {
-    document.getElementById("projects").style.display = "black";
+    document.getElementById("projects").style.backgroundColor = "black";
   }
   if(document.getElementsByClassName("education-entry").length === 0) {
-    document.getElementById("education").style.display = "black";
+    document.getElementById("education").style.backgroundColor = "black";
   }
   if(document.getElementsByClassName("skills-entry").length === 0) {
-    document.getElementById("skillsChart").style.display = "black";
+    document.getElementById("skillsChart").style.backgroundColor = "black";
   }
   if(document.getElementsByClassName("flex-item").length === 0) {
-    document.getElementById("letsConnect").style.display = "black";
+    document.getElementById("letsConnect").style.backgroundColor = "black";
   }
   if(document.getElementById("map") == undefined) {
-    document.getElementById("mapDiv").style.display = "black";
+    document.getElementById("mapDiv").style.display = "none";
   }
   </script>
 </body>
