--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <link href="css/style.css" rel="stylesheet" type="text/css"></link>
 
  
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <!--<script src="js/jQuery.js"></script>-->
+  <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
+  <script src="js/jQuery.js"></script>
   <script src="http://code.highcharts.com/highcharts.js"></script>
   <script src="http://code.highcharts.com/modules/exporting.js"></script>
 
@@ -115,8 +115,8 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   if(document.getElementsByClassName("flex-item").length === 0) {
     document.getElementById("letsConnect").style.backgroundColor = "black";
   }
-  if(document.getElementById("map") == undefined) {
-    document.getElementById("mapDiv").style.display = "none";
+  if(document.getElementById("map") === null) {
+    document.getElementById("mapDiv").style.display = "black";
   }
   </script>
 </body>
