--- a/index.html
+++ b/index.html
@@ -13,37 +13,50 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 <scripts> for JavaScript files to build interactions.
 -->
 <head>
-  <link href="css/style.css" rel="stylesheet" type="text/css"></link>
+  <!-- This tells the browser how to read the document. -->
+  <meta charset="utf-8">
 
- 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <!--<script src="js/jQuery.js"></script>-->
-  <script src="http://code.highcharts.com/highcharts.js"></script>
-  <script src="http://code.highcharts.com/modules/exporting.js"></script>
+  <!-- Tells the browser what the title of this page should be. -->
+  <title>Resume</title>
 
+  <!-- Load the page styles. -->
+  <link href="css/style.css" rel="stylesheet" type="text/css">
+
+  <!--
+  jQuery is a common JavaScript library for reading and making changes to the
+  Document Object Model (DOM). The DOM is a tree that contains information
+  about what is actually visible on a website.
+  While HTML is a static document, the browser converts HTML to the
+  DOM and the DOM can change. In fact, JavaScript's power comes from
+  its ability to manipulate the DOM, which is essentially a JavaScript
+  object. When JavaScript makes something interesting happen on a
+  website, it's likely the action happened because JavaScript changed
+  the DOM. jQuery is fast and easy to use, but it doesn't do anything
+  you can't accomplish with vanilla (regular) JavaScript.
+  -->
+  <script src="js/jQuery.js"></script>
+
+  <!-- More on helper.js in the class -->
   <script src="js/helper.js"></script>
 
- 
+  <!--
+  Uncomment the <script> tag below when you're ready to add an interactive
+  Google Map to your resume!
+  -->
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-  
-  <!--<script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUuHULNZaAF1_bDfR1ga2Jn6po_RcxwUg&callback=initMap">
-  </script>-->
- 
+
   <meta name="viewport" content="width=device-width">
 </head>
-<body>
+<body unresolved>
   <div id="main">
-   <!-- You'll be deleting this line in the course -->
-   
+
     <!--
     Everything from here to the <script> tag below is the skeleton of your
     website. Your code will add information to each of the sections of the
     resume below. You can pretty easily figure out what each section will
     display by looking at the id or at what's written between the <h2> tags.
     -->
-    <div id="header" class="center-content">
+    <div id="header" class="center-content clearfix">
       <ul id="topContacts" class='flex-box'></ul>
     </div>
     <div style='clear: both;'></div>
@@ -56,15 +69,12 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     <div id="education" class='gray'>
       <h2>Education</h2>
     </div>
-    <div id="skillsChart">
-      <h2>Skills Chart</h2>
-    </div>
     <div id="mapDiv">
       <h2>Where I've Lived and Worked</h2>
     </div>
     <div id="letsConnect" class='dark-gray'>
       <h2 class='orange center-text'>Let's Connect</h2>
-      <ul id="footerContacts" class="flex-box">
+        <ul id="footerContacts" class="flex-box">
       </ul>
     </div>
   </div>
@@ -86,38 +96,35 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   -->
 
   <script type="text/javascript">
-  // Notice how all of a sudden there's JavaScript inside this HTML
-  // document? You can write JavaScript between <script> tags. At the end of your 
-  // JavaScript, don't forget the closing script tag with the slash (/).
-  // Also, this is a JavaScript style comment. You can comment in JavaScript with:
-  //   two slashes for all following characters on a single line, or
-  /*
-      an opening and closing set of slash asterisks for block comments.
-  */
-  if(document.getElementsByClassName("flex-item").length === 0) {
-    document.getElementById("topContacts").style.backgroundColor = "black";
-  }
-  if(document.getElementsByTagName("h1").length === 0) {
-    document.getElementById("header").style.backgroundColor = "black";
-  }
-  if(document.getElementsByClassName("work-entry").length === 0) {
-    document.getElementById("workExperience").style.backgroundColor = "black";
-  }
-  if(document.getElementsByClassName("project-entry").length === 0) {
-    document.getElementById("projects").style.backgroundColor = "black";
-  }
-  if(document.getElementsByClassName("education-entry").length === 0) {
-    document.getElementById("education").style.backgroundColor = "black";
-  }
-  if(document.getElementsByClassName("skills-entry").length === 0) {
-    document.getElementById("skillsChart").style.backgroundColor = "black";
-  }
-  if(document.getElementsByClassName("flex-item").length === 0) {
-    document.getElementById("letsConnect").style.backgroundColor = "black";
-  }
-  if(document.getElementById("map") === null) {
-    document.getElementById("mapDiv").style.display = "black";
-  }
+    // Notice how all of a sudden there's JavaScript inside this HTML
+    // document? You can write JavaScript between <script> tags. At the end of your
+    // JavaScript, don't forget the closing script tag with the slash (/).
+    // Also, this is a JavaScript style comment. You can comment in JavaScript with:
+    //   two slashes for all following characters on a single line, or
+    /*
+        an opening and closing set of slash asterisks for block comments.
+    */
+    if(document.getElementsByClassName('flex-item').length === 0) {
+      document.getElementById('topContacts').style.backgroundColor = 'black';
+    }
+    if(document.getElementsByTagName('h1').length === 0) {
+      document.getElementById('header').style.backgroundColor = 'black';
+    }
+    if(document.getElementsByClassName('work-entry').length === 0) {
+      document.getElementById('workExperience').style.backgroundColor = 'black';
+    }
+    if(document.getElementsByClassName('project-entry').length === 0) {
+      document.getElementById('projects').style.backgroundColor = 'black';
+    }
+    if(document.getElementsByClassName('education-entry').length === 0) {
+      document.getElementById('education').style.backgroundColor = 'black';
+    }
+    if(document.getElementsByClassName('flex-item').length === 0) {
+      document.getElementById('letsConnect').style.backgroundColor = 'black';
+    }
+    if(document.getElementById('map') === null) {
+      document.getElementById('mapDiv').style.backgroundColor = 'black';
+    }
   </script>
 </body>
 </html>
