--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     <div id="projects">
       <h2>Examples</h2>
     </div>
+    <div id="certification">
+      <h2>Certifications</h2>
+    </div>
     <div id="education" class='gray'>
       <h2>Education</h2>
     </div>
