--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     <div id="certification">
       <h2>Certifications</h2>
     </div>
+    <div id="software">
+      <h2>Software and Applications</h2>
+      <span class="stars" title="{value as decimal}">
+      <span style="width={value/5*100}%;"/>
+</span>
+    </div>
     <div id="education" class='gray'>
       <h2>Education</h2>
     </div>
