--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
       <h2>Certifications</h2>
     </div>
     <div id="software">
-      <h2>Software and Applications</h2>
+      <h2>Software</h2>
 
     </div>
     <div id="education" class='gray'>
