--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
       <br>
       <h2>Software</h2>
           <span class="stars" title="{value as decimal}">
-    <span style="width={value/5*100}%;"/>
+    <span style="width={3/5*100}%;"/>
 </span>
     </div>
     <div id="education" class='gray'>
