--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     <div id="software">
       <br>
       <h2>Software</h2>
-      
+      <div class='rating_bar'>
+    <!-- div element that contains full stars with percentage width, 
+    which represents rating -->
+    <div  class='rating' style='width:40%;'>
+    </div>
+</div>
 
 </div>
      </div>
