--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     <!-- div element that contains full stars with percentage width, 
     which represents rating -->
     <div  class='rating' style='width:40%;'>
+      testing
     </div>
 </div>
 
