--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     <div id="certification">
       <h2>Certifications</h2>
     </div>
-    <div id="software">
+   <!-- <div id="software">
       <br>
       <h2>Software</h2>
       <div class='rating_bar'>
     <!-- div element that contains full stars with percentage width, 
     which represents rating -->
-    <div  class='rating' style='width:65%;'>
+    <!--<div  class='rating' style='width:65%;'>
       
-    </div>
+    </div> -->
 </div>
 
 </div>
