--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 <head>
   <!-- This tells the browser how to read the document. -->
   <meta charset="utf-8">
-
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <!-- Tells the browser what the title of this page should be. -->
   <title>Robert Davis' Resume</title>
-
+  <meta name="Job Seeker" content="career, jobs, Opportunity, growth, employment">
+  <meta name="Data Analyst" content="Report Analyst, Data Strategist, Data Integration, Data Consultant, Data Scientist">
+  <meta name="Report Analyst" content="Data Analyst, Data Strategist, Data Integration, Data Consultant, Data Scientist">
+  <meta name="Sales Analyst" content="Operations Analyst, Global Sales Analyst, Salesforce, CRM, Dynamics, Saleforce.com, data.com">
+  <meta name="Business Intelligence" content="Tableau Analyst, Microstrategy, Business Objects, dashboard, reporting, information">
+  <meta name="Microsoft Certification" content="Microsoft Technology Associate, Microsoft Certified Professional, Salesforce.com Administrator, Microsoft Certified Desktop Support Technician, CompTia A+, Microsoft Office User Specialist">
+  <meta name="Certification" content="A+, MCP, MCDST, MTA, MOUS">
   <!-- Load the page styles. -->
   <link href="css/style.css" rel="stylesheet" type="text/css">
 
