--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <meta name="Certification" content="A+, MCP, MCDST, MTA, MOUS">
   <meta name="Programming" content="SQL, T-SQL, PL/SQL, SQL Server, Oracle, MySQL, R, Python, Visual Basic for Applications, VBA">
   <meta name="Application" content="MS Excel, MS Access, Salesforce, JIRA, Tableau, Oracle SQL Developer, Toad, MySQL Workbench">
+  <meta name="Pleasant View" content="Nashville, Brentwood, Clarksville, Ashland City, Franklin, Springfield, Tennessee">
   <!-- Load the page styles. -->
   <link href="css/style.css" rel="stylesheet" type="text/css">
 
