--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <meta name="Pleasant View" content="Nashville, Brentwood, Clarksville, Ashland City, Franklin, Springfield, Tennessee">
   <!-- Load the page styles. -->
   <link href="css/style.css" rel="stylesheet" type="text/css">
+ 
 
   <!--
   jQuery is a common JavaScript library for reading and making changes to the
@@ -150,6 +151,18 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     if(document.getElementById('map') === null) {
       document.getElementById('mapDiv').style.backgroundColor = 'black';
     }
+    
+  /*Below is Google Analytics Data*/  
   </script>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-74156325-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
